add baseurl tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html><head><title>City of Austin Enterprise Architecture</title>
+<html><head><base href="https://cityofaustin.github.io/austinea/">
+<title>City of Austin Enterprise Architecture</title>
 
 <link rel="StyleSheet" href="hover.css" type="text/css">
 <style>
