--- a/whitepaper/UseCaseModel/index.html
+++ b/whitepaper/UseCaseModel/index.html
@@ -86,7 +86,7 @@ Figure 2: UML Sequence Diagram for Interaction Overview<br />Step 1. Process Cre
 <!-- Image map -->
 <table align="center" cellpadding="0" cellspacing="0" border="0"><tr><td>
 <div style="text-align:center; width:630px; margin-left:auto; margin-right:auto; ">
-<img id="Image-Maps_7201209061459239" src="activitymodel.png" usemap="#Image-Maps_7201209061459239" border="0" width="630" alt="" />
+<img id="Image-Maps_7201209061459239" src="ActivityModel.png" usemap="#Image-Maps_7201209061459239" border="0" width="630" alt="" />
 <map id="_Image-Maps_7201209061459239" name="Image-Maps_7201209061459239">
 <area shape="rect" coords="236,72,410,103" onclick="stepview('SequenceDiagram.png')" alt="" title="Step 1" target="stepview"   />
 <area shape="rect" coords="20,211,166,244" onclick="stepview('Step2.png')" alt="" title="Step 2" target="stepview"  />
