--- a/whitepaper/UseCaseModel/index.html
+++ b/whitepaper/UseCaseModel/index.html
@@ -86,15 +86,17 @@ Figure 2: UML Sequence Diagram for Interaction Overview<br />Step 1. Process Cre
 <!-- Image map -->
 <table align="center" cellpadding="0" cellspacing="0" border="0"><tr><td>
 <div style="text-align:center; width:630px; margin-left:auto; margin-right:auto; ">
-<img id="Image-Maps_7201209061459239" src="ActivityModel.png" usemap="#Image-Maps_7201209061459239" border="0" width="630" alt="" />
-<map id="_Image-Maps_7201209061459239" name="Image-Maps_7201209061459239">
+<img id="Image-Maps_7201209061459239" src="ActivityModel.png" usemap="#map123" border="0" width="630" alt="" />
+
+<map id="_Image-Maps_7201209061459239" name="map123">
 <area shape="rect" coords="236,72,410,103" onclick="stepview('SequenceDiagram.png')" alt="" title="Step 1" target="stepview"   />
 <area shape="rect" coords="20,211,166,244" onclick="stepview('Step2.png')" alt="" title="Step 2" target="stepview"  />
 <area shape="rect" coords="192,209,323,242" onclick="stepview('Step3.png')" alt="" title="Step 3" target="stepview"   />
 <area shape="rect" coords="332,209,465,242" onclick="stepview('Step4.png')" alt="" title="Step 4" target="stepview"   />
 <area shape="rect" coords="479,231,654,274" onclick="stepview('Step5.png')" alt="" title="Step 5" target="stepview"   />
-<area shape="rect" coords="689,394,691,396" href="http://www.image-maps.com/index.php?aff=mapped_users_7201209061459239" alt="Image Map" title="Image Map" />
+
 </map>
+
 <!-- Image map text links - End - --><br />
 <b>Figure 3: Use Case Activity Model - Interaction Overview</b>
 </div>
