--- a/arch/gis/index.html
+++ b/arch/gis/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"><head>
-<link rel=StyleSheet href=/austinea/style/style4.css" type="text/css">
+<link rel=StyleSheet href="/austinea/style/style4.css" type="text/css">
 
 <!-- Web Browser Title -->
 <title>Geospatial Information System Use Case Index</title>
