--- a/standards/index.html
+++ b/standards/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html><head><title>COA Technical Requirements</title>
 
-<link rel="Stylesheet" href="hover.css" type="text/css">
+<link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css">
 </head>
 
 <body style="background-color: rgb(221, 216, 194);">
