--- a/arch/code/index2.html
+++ b/arch/code/index2.html
@@ -77,7 +77,7 @@ Packet </a>
 <li style="font-size: 8pt;"><a href="/austinea/arch/code/createCodeViolationCase/index.html" target="usecase"> Create Code Violation Case </a>
 </li>
 <li style="font-size: 8pt;"><a href="/austinea/arch/code/createReceivable/index.html" target="usecase"> Create Receivable</a></li>
-<li style="font-size: 8pt;"><a href="http://www.austinea.org/arch/code/developBuildingStandardsCommissionCase/index.html">Develop
+<li style="font-size: 8pt;"><a href="/austinea/arch/code/developBuildingStandardsCommissionCase/index.html">Develop
 Building Standards Commission Case</a></li>
 <li style="font-size: 8pt;"><a href="/austinea/arch/code/engageEmergencyResponse/index.html" target="usecase"> Engage Emergency Response </a>
 </li>
@@ -112,7 +112,7 @@ Building Standards Commission Case</a></li>
 <li style="font-size: 8pt;"><a href="/austinea/arch/code/obtainCityLegalApproval/index.html" target="usecase"> Obtain City Legal Approval </a>
 </li>
 <li style="font-size: 8pt;"><a href="/austinea/arch/code/obtainMunicipalCourtSearchAndSeizureWarrant/index.html" target="usecase"> Obtain Municipal Court Search And Seizure
-Warrant </a></li><li style="font-size: 8pt;"><a href="http://www.austinea.org/arch/code/orderPropertyAbatement/index.html">Order Property Abatement</a></li>
+Warrant </a></li><li style="font-size: 8pt;"><a href="/austinea/arch/code/orderPropertyAbatement/index.html">Order Property Abatement</a></li>
 <li style="font-size: 8pt;"><a href="/austinea/arch/code/payInvoice/index.html" target="usecase"> Pay Invoice </a>
 </li>
 <li style="font-size: 8pt;"><a href="/austinea/arch/code/payContractorAndBillOwner/index.html" target="usecase"> Pay Contractor And Bill Owner </a>
