--- a/arch/code/inspectZoningLandUseViolation/index.html
+++ b/arch/code/inspectZoningLandUseViolation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-<title>Extend Violation Resolution Time</title>
+<title>Inspect Zoning Land Use Violation</title>
 <link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css" />
 </head>
 <body bgcolor="#ddd8c2">
