--- a/default.html
+++ b/default.html
@@ -23,10 +23,13 @@
 <td colspan="2" valign="top"><p style="font-size: 8pt;">Point of Contact:</p></td>
 </tr>
 <tr>
-<td><b>Rob Byrd</b><br>
+
+  
+  <!-- <td><b>Rob Byrd</b><br>
 Chief Enterprise Architect<br>
 Phone: (512) 974-1615<br>
-<a href="mailto:rob.byrd@austintexas.gov">rob.byrd@austintexas.gov</a></td>
+<a href="mailto:rob.byrd@austintexas.gov">rob.byrd@austintexas.gov</a></td> --> 
+  
 
 <td><b>Aaron Brown</b><br>
 Senior Enterprise Architect<br>
@@ -93,28 +96,28 @@ systems. Refer to Wikipedia <a href="http://en.wikipedia.org/wiki/Enterprise_arc
 </p><p>This site is dedicated to training, collaboration, and dissemination of City of Austin Enterprise Architecture artifacts.
 
 </p><p style="font-weight: bold; font-size: 10pt;">Table of Contents</p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/arch/ctm/">CTM Service Model</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/docs/eaagcharter/">Draft EA Advisory Group Charter</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/roadmap/performance.html">EA Performance Self-Assessment</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/roadmap/">EA Roadmap</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/whitepaper/yearEndReport/">Draft EA Year End Report</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/whitepaper/strategicMetamodel/">EA Strategic Meta-Model</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/definition/default.html">Terms and Definitions</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/standards">IT Technical Standards</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/image/cTMStrategicPlanFramework150325.jpg">CTM Strategic Plan</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span><a href="http://austinea.org/arch/appService/">Application Service Goals</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span>Procedures</p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/arch/ctm/">CTM Service Model</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/docs/eaagcharter/">Draft EA Advisory Group Charter</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/roadmap/performance.html">EA Performance Self-Assessment</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/roadmap/">EA Roadmap</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/whitepaper/yearEndReport/">Draft EA Year End Report</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/whitepaper/strategicMetamodel/">EA Strategic Meta-Model</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/definition/default.html">Terms and Definitions</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/standards">IT Technical Standards</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/image/cTMStrategicPlanFramework150325.jpg">CTM Strategic Plan</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span><a href="http://austinea.org/arch/appService/">Application Service Goals</a></p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span>Procedures</p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/docs/configSession/">Repository</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span>White Papers</p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span>White Papers</p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/whitepaper/PMandEA/">Understanding Roles between EA and PMO</a></p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/whitepaper/morethanit/">EA is More than Information Technology</a></p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/whitepaper/umleastrategy/">Using the UML for Enterprise Architecture</a></p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/whitepaper/usecasemodel/default.html">Anatomy of the Use Case</a></p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/whitepaper/requirementsmanagement/default.html">Enterprise Architecture as a Requirements Collection Tool</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span>Training Materials</p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span>Training Materials</p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/training/trainingplan/">Training Plan</a></p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/training/presentation.html">EA Introduction</a></p>
-<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">· </span>UML Use Case Models</p>
+<p class="contents" style="text-indent: 0.2in;"><span style="font-weight: bold; font-size: 11pt;">Â· </span>UML Use Case Models</p>
 
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/arch/311/index.html">311 / Austin Energy</a></p>
 <p class="contents" style="text-indent: 0.4in;">- <a href="http://austinea.org/arch/as/report/">Animal Services</a></p>
