--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -61,7 +61,7 @@ Enterprise Architecture
 </tr>
 <tr>
 <td>09/08/2015</td>
-<td>Changed link to updated <a href="/austinea/training/trainingplan/">EA Training Plan</a>.</td>
+<td>Changed link to updated <a href="https://cityofaustin.github.io/austinea/training/TrainingPlan/">EA Training Plan</a>.</td>
 </tr>
 <tr>
 <td>08/18/2015</td>
@@ -299,7 +299,7 @@ Enterprise Architecture
 
 <p>Enterprise architecture is not a trivial skill to learn. Candidates require significant business process and technology experience. Certified by the CEA, the Enterprise Architect delivers business/operation, solution/system and technical/standards architectures. Training takes approximately one year (3 to 7 hours/week) plus an additional year of on-the-job-training with an experienced Enterprise Architect. The CEA certifies the candidate Enterprise Architect once observable performance demonstrates ability to capture architecture artifacts in the EA repository. Certification provides unsupervised read/write access to the city's EA repository.
 
-<p>The Chief Enterprise Architect is responsible for developing an EA training program to train future architects on the principles and processes used to develop the citywide enterprise architecture. See <a href="/austinea/training/trainingplan/">EA Training Plan</a> for more information.
+<p>The Chief Enterprise Architect is responsible for developing an EA training program to train future architects on the principles and processes used to develop the citywide enterprise architecture. See <a href="https://cityofaustin.github.io/austinea/training/TrainingPlan/">EA Training Plan</a> for more information.
  
 <h1 id="4_0">4.0 Summary</h1>
 
