--- a/definition/index.html
+++ b/definition/index.html
@@ -13,7 +13,7 @@
 <!-- Text Area -->
 <tr><td>
 
-<p>Contact Rob Byrd at <a href="mailto:rob.byrd@austintexas.gov">rob.byrd@austintexas.gov</a> to add new terms and definitions
+<p>Contact Aaron Brown at <a href="mailto:aaron.brown2@austintexas.gov">aaron.brown2@austintexas.gov</a> to add new terms and definitions
 
 <h2>Terms and Definitions</h2>
 
