--- a/training/TrainingPlan/index.html
+++ b/training/TrainingPlan/index.html
@@ -20,7 +20,7 @@
 	</tr></table>
 
 <h2 align="center">City of Austin Enterprise Architecture Training Plan</h2>
-<p align="center"><a href="mailto:rob.byrd@austintexas.gov">Rob Byrd</a>, Corporate Chief Enterprise Architect<br />Date: 09/08/2015
+<p align="center"><a href="mailto:aaron.brown2@austintexas.gov">Aaron Brown</a>, Senior City Enterprise Architect<br />Date: 12/06/2016
 
 <p style="text-align: center;">Download <a href="/austinea/training/trainingPlan/EATrainingPlan.pdf">printable version</a>
 
