--- a/arch/municourt/index2.html
+++ b/arch/municourt/index2.html
@@ -76,7 +76,9 @@ Direct: (512) 974-2960 | Mobile: (512) 296-5276
 <td> <!-- Sequence Diagrams -->
 
 <ul style="margin-left: 0px; padding-left: 20px;">
-
+  
+  
+<li style="font-size: 8pt;"><a href="/austinea/arch/municourt/addCaseToCollections/index.html" target="usecase"> Add Case To Collections </a>
 <li style="font-size: 8pt;"><a href="/austinea/arch/municourt/report/update130815.html" target="usecase"> Accept Case File Document </a>
 <li style="font-size: 8pt;"><a href="/austinea/arch/municourt/report/update130905.html" target="usecase"> Account for Community Service Time </a>
   
