--- a/arch/municourt/addCaseToCollections/index.html
+++ b/arch/municourt/addCaseToCollections/index.html
@@ -130,7 +130,7 @@ be sent to the collection agency along with the recalculated fee.
 <td rowspan="2"> </td>
 </tr>
 <tr>
-<td>Create a log record stating that a collection fee is added, reduced
+<td>the case management system creates a log record stating that a collection fee is added, reduced
 or removed. The record includes the starting balance, balance total
 (case balance), collection fee amount, and date and time when the
 change event occurred.
