--- a/arch/municourt/issueWarrants/index.html
+++ b/arch/municourt/issueWarrants/index.html
@@ -39,8 +39,7 @@
 <p><b>Scope: </b>The Court Clerk selects a list of cases to review for warrant activation by submitting the type of warrant being processed. 
 The case management evaluates all active cases and returns the list of cases that are eligible for warrant status. Types of warrants includes:
 <ul>
-<li>WARR (Capias: PCA</li>
-<li>Probable Cause Affidavit)</li>
+<li>WARR (Capias: PCA (Probable Cause Affidavit)</li>
 <li>CAPW (Capias Pro Fine)</li>
 </ul>
 </p>
