--- a/arch/municourt/updateCourtPay/index.html
+++ b/arch/municourt/updateCourtPay/index.html
@@ -58,7 +58,7 @@ and proceeds to process the the disbursed bond amount as a payment or reversal w
 
 <p>This Use case also depends upon the following use cases:</p>
 <ul>
-	<li><a href="/austinea/arch/municourt/postCashBond/index.html">Monitor Case Compliance Use Case</a></li>
+	<li><a href="/austinea/arch/municourt/postCashBond/index.html">Post Cash Bond Use Case</a></li>
 	<li><a href="/austinea/arch/municourt/sendMessageToCollections/index.html">Send Message To Collections Use Case</a></li>
 </ul>
 <br />
