--- a/arch/municourt/manageCollectionsIO/index.html
+++ b/arch/municourt/manageCollectionsIO/index.html
@@ -5,16 +5,16 @@
 <link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css" />
 
 <map name="ManageCollectionsIO">
-<area shape="poly" coords="262,70,411,70,487,72,485,104,427,106,318,106,258,104,256,74" href="***AddCaseToCollections***.html" alt="AddCaseToCollections" title="AddCaseToCollections"/>
-<area shape="poly" coords="129,294,278,294,354,296,358,302,357,323,352,328,292,329,187,329,127,328,123,323,123,298" href="***ChangeCaseStatus***.html" alt="ChangeCaseStatus" title="ChangeCaseStatus"/>
-<area shape="poly" coords="130,425,301,425,356,431,357,455,352,459,293,461,187,461,127,460,123,455,123,429" href="***RestartCollectionsOnCase***.html" alt="RestartCollectionsOnCase" title="RestartCollectionsOnCase"/>
-<area shape="poly" coords="130,569,301,569,356,575,357,599,352,603,293,605,187,605,127,604,123,599,123,573" href="***PauseCollectionsOnCase***.html" alt="PauseCollectionsOnCase" title="PauseCollectionsOnCase"/>
-<area shape="poly" coords="129,725,278,725,354,727,357,755,352,760,292,761,187,761,127,760,123,755,123,729" href="***WithdrawCaseFromCollections***.html" alt="WithdrawCaseFromCollections" title="WithdrawCaseFromCollections"/>
-<area shape="poly" coords="723,261,894,261,949,267,950,291,945,295,886,297,780,297,720,296,716,291,716,265" href="***UpdateCollectionPay***.html" alt="UpdateCollectionPay" title="UpdateCollectionPay"/>
-<area shape="poly" coords="722,345,871,345,947,347,950,375,945,380,885,381,780,381,720,380,716,375,716,349" href="***UpdateCourtPay***.html" alt="UpdateCourtPay" title="UpdateCourtPay"/>
-<area shape="poly" coords="723,465,894,465,949,471,945,499,886,501,780,501,720,500,716,495,716,469" href="***ReverseCollectionPayment***.html" alt="ReverseCollectionPayment" title="ReverseCollectionPayment"/>
-<area shape="poly" coords="722,589,871,589,947,591,950,619,945,624,885,625,780,625,720,624,716,619,716,593" href="***ModifyCollectionFee***.html" alt="ModifyCollectionFee" title="ModifyCollectionFee"/>
-<area shape="poly" coords="722,706,871,706,947,708,950,736,945,741,885,742,780,742,720,741,716,736,716,710" href="***ModifyCaseCollectionBalance***.html" alt="ModifyCaseCollectionBalance" title="ModifyCaseCollectionBalance"/>
+<area shape="poly" coords="262,70,411,70,487,72,485,104,427,106,318,106,258,104,256,74" href="https://cityofaustin.github.io/austinea/arch/municourt/addCaseToCollections/index.html" alt="AddCaseToCollections" title="AddCaseToCollections"/>
+<area shape="poly" coords="129,294,278,294,354,296,358,302,357,323,352,328,292,329,187,329,127,328,123,323,123,298" href="https://cityofaustin.github.io/austinea/arch/municourt/changeCaseStatus/index.html" alt="ChangeCaseStatus" title="ChangeCaseStatus"/>
+<area shape="poly" coords="130,425,301,425,356,431,357,455,352,459,293,461,187,461,127,460,123,455,123,429" href="https://cityofaustin.github.io/austinea/arch/municourt/restartCollectionsOnCase/index.html" alt="RestartCollectionsOnCase" title="RestartCollectionsOnCase"/>
+<area shape="poly" coords="130,569,301,569,356,575,357,599,352,603,293,605,187,605,127,604,123,599,123,573" href="https://cityofaustin.github.io/austinea/arch/municourt/pauseCollectionsOnCase/index.html" alt="PauseCollectionsOnCase" title="PauseCollectionsOnCase"/>
+<area shape="poly" coords="129,725,278,725,354,727,357,755,352,760,292,761,187,761,127,760,123,755,123,729" href="https://cityofaustin.github.io/austinea/arch/municourt/withdrawCaseFromCollections/index.html" alt="WithdrawCaseFromCollections" title="WithdrawCaseFromCollections"/>
+<area shape="poly" coords="723,261,894,261,949,267,950,291,945,295,886,297,780,297,720,296,716,291,716,265" href="https://cityofaustin.github.io/austinea/arch/municourt/updateCollectionPay/index.html" alt="UpdateCollectionPay" title="UpdateCollectionPay"/>
+<area shape="poly" coords="722,345,871,345,947,347,950,375,945,380,885,381,780,381,720,380,716,375,716,349" href="https://cityofaustin.github.io/austinea/arch/municourt/updateCourtPay/index.html" alt="UpdateCourtPay" title="UpdateCourtPay"/>
+<area shape="poly" coords="723,465,894,465,949,471,945,499,886,501,780,501,720,500,716,495,716,469" href="https://cityofaustin.github.io/austinea/arch/municourt/reverseCollectionPayment/index.html" alt="ReverseCollectionPayment" title="ReverseCollectionPayment"/>
+<area shape="poly" coords="722,589,871,589,947,591,950,619,945,624,885,625,780,625,720,624,716,619,716,593" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCollectionFee/index.html.html" alt="ModifyCollectionFee" title="ModifyCollectionFee"/>
+<area shape="poly" coords="722,706,871,706,947,708,950,736,945,741,885,742,780,742,720,741,716,736,716,710" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCaseCollectionBalance/index.html.html" alt="ModifyCaseCollectionBalance" title="ModifyCaseCollectionBalance"/>
 </map>
 
 </head>
