--- a/arch/municourt/manageCollectionsIO/index.html
+++ b/arch/municourt/manageCollectionsIO/index.html
@@ -13,8 +13,8 @@
 <area shape="poly" coords="723,261,894,261,949,267,950,291,945,295,886,297,780,297,720,296,716,291,716,265" href="https://cityofaustin.github.io/austinea/arch/municourt/updateCollectionPay/index.html" alt="UpdateCollectionPay" title="UpdateCollectionPay"/>
 <area shape="poly" coords="722,345,871,345,947,347,950,375,945,380,885,381,780,381,720,380,716,375,716,349" href="https://cityofaustin.github.io/austinea/arch/municourt/updateCourtPay/index.html" alt="UpdateCourtPay" title="UpdateCourtPay"/>
 <area shape="poly" coords="723,465,894,465,949,471,945,499,886,501,780,501,720,500,716,495,716,469" href="https://cityofaustin.github.io/austinea/arch/municourt/reverseCollectionPayment/index.html" alt="ReverseCollectionPayment" title="ReverseCollectionPayment"/>
-<area shape="poly" coords="722,589,871,589,947,591,950,619,945,624,885,625,780,625,720,624,716,619,716,593" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCollectionFee/index.html.html" alt="ModifyCollectionFee" title="ModifyCollectionFee"/>
-<area shape="poly" coords="722,706,871,706,947,708,950,736,945,741,885,742,780,742,720,741,716,736,716,710" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCaseCollectionBalance/index.html.html" alt="ModifyCaseCollectionBalance" title="ModifyCaseCollectionBalance"/>
+<area shape="poly" coords="722,589,871,589,947,591,950,619,945,624,885,625,780,625,720,624,716,619,716,593" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCollectionFee/index.html" alt="ModifyCollectionFee" title="ModifyCollectionFee"/>
+<area shape="poly" coords="722,706,871,706,947,708,950,736,945,741,885,742,780,742,720,741,716,736,716,710" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCaseCollectionBalance/index.html" alt="ModifyCaseCollectionBalance" title="ModifyCaseCollectionBalance"/>
 </map>
 
 </head>
@@ -67,7 +67,7 @@ overall collection process. The collection process monitors cases as they
 <!-- IF INTERACTION OVERVIEW IS INCLUDED -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/municourt/manageCollectionsIO/io.jpg"><img src="/austinea/arch/municourt/manageCollectionsIO/io.jpg" border="0" alt="" /></a><br />
+<a href="/austinea/arch/municourt/manageCollectionsIO/io.jpg"><img src="/austinea/arch/municourt/manageCollectionsIO/io_detail.jpg" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Collections Interaction Overview</span>
 </td></tr></table>
 <br/>
