--- a/arch/municourt/manageCollectionsIO/index.html
+++ b/arch/municourt/manageCollectionsIO/index.html
@@ -13,8 +13,8 @@
 <area shape="poly" coords="347,125,429,125,455,128,456,140,453,142,425,143,374,143,345,142,343,140,343,127" href="https://cityofaustin.github.io/austinea/arch/municourt/updateCollectionPay/index.html" alt="UpdateCollectionPay" title="UpdateCollectionPay"/>
 <area shape="poly" coords="346,166,418,166,454,167,456,180,453,182,424,183,374,183,345,182,343,180,343,168" href="https://cityofaustin.github.io/austinea/arch/municourt/updateCourtPay/index.html" alt="UpdateCourtPay" title="UpdateCourtPay"/>
 <area shape="poly" coords="347,223,429,223,455,226,453,240,425,240,374,240,345,240,343,238,343,225" href="https://cityofaustin.github.io/austinea/arch/municourt/reverseCollectionPayment/index.html" alt="ReverseCollectionPayment" title="ReverseCollectionPayment"/>
-<area shape="poly" coords="346,283,418,283,454,284,456,297,453,300,424,300,374,300,345,300,343,297,343,285" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCollectionFee/index.html.html" alt="ModifyCollectionFee" title="ModifyCollectionFee"/>
-<area shape="poly" coords="346,339,418,339,454,340,456,353,453,356,424,356,374,356,345,356,343,353,343,341" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCaseCollectionBalance/index.html.html" alt="ModifyCaseCollectionBalance" title="ModifyCaseCollectionBalance"/>
+<area shape="poly" coords="346,283,418,283,454,284,456,297,453,300,424,300,374,300,345,300,343,297,343,285" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCollectionFee/index.html" alt="ModifyCollectionFee" title="ModifyCollectionFee"/>
+<area shape="poly" coords="346,339,418,339,454,340,456,353,453,356,424,356,374,356,345,356,343,353,343,341" href="https://cityofaustin.github.io/austinea/arch/municourt/modifyCaseCollectionBalance/index.html" alt="ModifyCaseCollectionBalance" title="ModifyCaseCollectionBalance"/>
 </map>
 
 </head>
