--- a/arch/municourt/manageCollectionsIO/index.html
+++ b/arch/municourt/manageCollectionsIO/index.html
@@ -46,7 +46,7 @@
 <!-- USE CASE IMAGE -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/municourt/manageCollectionsInteractionOverview/io.jpg"><img src="/austinea/arch/municourt/manageCollectionsIO/io.jpg" usemap="#ManageCollectionsIO" style="width:800px;height:616px;" border="0" alt="" /></a><br />
+<a href="/austinea/arch/municourt/manageCollectionsInteractionOverview/io.jpg"><img src="/austinea/arch/municourt/manageCollectionsIO/io.jpg" usemap="#ManageCollectionsIO" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Collections Interaction Overview</span>
 </td></tr></table>
 
